--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,25 @@
 {
-"name": "Goalkeeper Data Tracker",
-"short_name": "GK Tracker",
-"description": "Professional Goalkeeper Match Data and Analytics Tracker.",
-"start_url": "./goalkeeper_data_pack_final.html",
-"display": "standalone",
-"background_color": "#111827",
-"theme_color": "#2563EB",
-"orientation": "portrait",
-"icons": [
-{
-"src": "Keeper Data Analytics.png",
-"sizes": "192x192",
-"type": "image/png"
-},
-{
-"src": "Keeper Data Analytics.png",
-"sizes": "512x512",
-"type": "image/png"
-}
-]
+  "name": "Goalkeeper Data Pack Tracker",
+  "short_name": "GK Tracker",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#111827",
+  "theme_color": "#2563EB",
+  "icons": [
+    {
+      "src": "Keeper Data Analytics.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "Keeper Data Analytics.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "Keeper Data Analytics.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    }
+  ]
 }
